# mcp-local-reader

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  OPTIMIZATION.md  README.de.md  README.fr.md  README.ja.md  README.md  README.zh.md  build.sh  cache_utils.py  client_example.py  configure_claude.sh  debug_mappings.py  direct_core_test.py  env.example  install.sh  mcp_server.py  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  run_docker.sh  run_mcp_server.py  run_server.py  start_mcp.sh  test_debug.py  test_error_handling.py  test_mcp_direct.py  test_mcp_manual.py  test_real_files.py  test_stdio_pdf.py  test_stdio_pdf_simple.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
src/: mcp_http_server.py  mcp_server.py  mcp_stdio_server.py
src/file_reader/: __init__.py  cache_manager.py  config.py  core.py  file_cache.py  image_cache.py  llm_util.py  models.py  parsed_cache.py  (+2 more)
tests/: conftest.py  install_parser_deps.py  run_tests.py  test_archive_integration.py  test_archive_parser.py  test_archive_parser_direct.py  test_complete_cache_flow.py  test_core.py  test_environment_detection.py  test_extract_doc.py  test_extract_ppt.py  test_image_comprehensive.py  test_image_ocr_demo.py  test_image_upload.py  test_improved_errors.py  test_integration.py  test_mcp_server.py  test_models.py  test_oss_parsing.py  test_parsed_cache.py  test_parsers.py  test_pdf_image_chain.py  test_pdf_refactor.py  test_real_files.py  test_single_file.py  test_utils.py
(+21 files in other folders)
